Bug 113304 - Checkboxes on "Export..." file selection dialog are badly misplaced
Summary: Checkboxes on "Export..." file selection dialog are badly misplaced
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All All
: medium minor
Assignee: Katarina Behrens (Inactive)
URL:
Whiteboard: target:6.0.0
Keywords: bibisected, bisected, regression
: 113303 (view as bug list)
Depends on:
Blocks: LO-File-Dialog File-Export-Dialog
  Show dependency treegraph
 
Reported: 2017-10-20 18:04 UTC by Mirosław Zalewski
Modified: 2017-12-12 12:14 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot showing issue (38.27 KB, image/png)
2017-10-20 18:04 UTC, Mirosław Zalewski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mirosław Zalewski 2017-10-20 18:04:30 UTC
Created attachment 137164 [details]
screenshot showing issue

Checkboxes on "Export..." file selection dialog are badly misplaced. See attached screenshot.

This *might* be fixed once Bug 113303 is resolved.

Steps to reproduce:
1. Go to Tools -> Options -> General and ensure that "Use LibreOffice dialogs" is checked
2. Open any application
3. Click File -> Export...

Expected results:
Checkboxes on bottom part of dialog are nicely placed.

Actual results:
Checkboxes are misaligned badly, giving bad impression.
Comment 1 Xisco Faulí 2017-10-21 17:12:49 UTC
Reproduced in

Version: 6.0.0.0.alpha1+
Build ID: 8ba60ca42d4d1873b8cd85c5d3b5ed2f0e19df60
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

but not in

Version: 5.3.0.0.alpha1+
Build ID: 4136757b4e51c4e6f7cb4132c95538a7f831ef2c
CPU Threads: 4; OS Version: Linux 4.10; UI Render: default; VCL: gtk3; Layout Engine: new; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 2 raal 2017-10-21 21:51:43 UTC
This seems to have begun at the below commit.
Adding Cc: to Katarina Behrens ; Could you possibly take a look at this one?
Thanks

author	Katarina Behrens <Katarina.Behrens@cib.de>	2017-08-18 13:51:38 (GMT)
committer	Thorsten Behrens <Thorsten.Behrens@CIB.de>	2017-08-30 11:16:49 (GMT)
commit 4e825d97a8423c9493c5f6f4ac0493b8799f86f6 (patch)
tree 7b66b3f0a70bba76afad7726999c10252764f112
parent 99fb14ef729f9b92edcdd4bd7940d48fff6a7307 (diff)
gpg4libre: Encrypt with GPG checkbox in SaveAs file dialog, 1st stab
LibO's own file dialog only so far
Comment 3 Katarina Behrens (Inactive) 2017-10-31 20:33:19 UTC
*** Bug 113303 has been marked as a duplicate of this bug. ***
Comment 4 Commit Notification 2017-11-01 11:18:12 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=af318eeb4e23694e17b09b902afb98ddf9da9b7b

tdf#113304,filepicker: encrypt w/ GPG only when it makes sense

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Katarina Behrens (Inactive) 2017-11-01 17:32:58 UTC
Looks fixed