tdf#113304,filepicker: encrypt w/ GPG only when it makes sense

remotely gpg4libre-related

Change-Id: Iec6f1ca04e55c8d66e65bb8d349b613b66ad1c69
Reviewed-on: https://gerrit.libreoffice.org/44137
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>